# pyminimp3

./: .gitmodules  .travis.yml  MANIFEST.in  README.rst  pyproject.toml  requirements-dev.txt  setup.cfg  setup.py  tox.ini
lib/: minimp3.pyx  minimp3_impl.h
tests/: test_backend.py
tests/data/: tracks.rst
