[metadata]
name = pyminimp3
version = 0.0.1
author = Paul Ganssle
author_email = 'paul@ganssle.io'
url = "https://github.com/pyminimp3/pyminimp3"
license = "Apache Software License 2.0"
description = "Python bindings for minimp3"
long_description = file: README.rst
python_requires = >=3.6
classifiers =
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[options]
packages = find:
install_requires =

[options.packages.find]
where = "src"
